# my_screensaver

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: screensaver.h
src/: draw.c  utils.c  window.c
src/blobs/: alloc.c  blobs.c
src/blurred_trailing/: mod.c
src/fade/: alloc.c  fade.c
src/lights/: mod.c
src/meta/: mod.c
src/meta_gpu/: mod.c
src/morph/: morph.c
src/trailing/: mod.c
